welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:3: error: ')' expected but 'else' found.
    case (a,b,true) => if ((a <0) & (b<0) {return true} else {return false} ;
                                                        ^posNeg:4: error: ')' expected but ';' found.
    case (a,b,false) => if ((a <0) & (b<0) {return false} ; if ((a >0) & (b>0) {return false} ;
                                                          ^posNeg:4: error: ')' expected but ';' found.
    case (a,b,false) => if ((a <0) & (b<0) {return false} ; if ((a >0) & (b>0) {return false} ;
                                                                                              ^